- configured project to JDK 11